--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "js-data-nedb",
   "description": "nedb adapter for js-data.",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "homepage": "http://www.js-data.io/docs/dsnedbadapter",
   "repository": {
     "type": "git",
@@ -18,14 +18,16 @@
     "store",
     "database",
     "adapter",
-    "nedb"
+    "nedb",
+    "embedded",
+    "filesystem"
   ],
   "main": "./dist/js-data-nedb.js",
   "devDependencies": {
     "babel-core": "5.8.25",
     "babel-eslint": "4.1.3",
     "babel-loader": "5.3.2",
-    "bluebird": "^2.10.1",
+    "bluebird": "2.10.1",
     "chai": "3.3.0",
     "grunt": "0.4.5",
     "grunt-contrib-clean": "0.6.0",
